# Focus-Synergy

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SIGNING.md  build-favicon.js  build-favicon2.js  convert-fav.js  convert-ico.js  dev.bat  firestore.rules  index.html  index.js  metadata.json  netlify.toml  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: dashboard.html  index.html
frontend/js/modules/: export.js  notifications.js  onboarding.js  retrospective.js
frontend/js/storage/: FirebaseAdapter.js  LocalAdapter.js  StorageAdapter.js  index.js
lib/: home.dart  songlist.dart
scripts/: build-frontend.js  generate-screenshots.js  static-server.js  test-rules.js
src/: App.tsx  AppContext.tsx  data.ts  firebase.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AdminDashboard.tsx  CaseStudies.tsx  ContactForm.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  LucideIcon.tsx  Navbar.tsx  Process.tsx  Services.tsx  Stats.tsx  Testimonials.tsx
